# access_control_system

./: .gitignore  README.md  docker-compose.yml
access_service/: pyproject.toml
access_service/alembic/: env.py
access_service/alembic/versions/: 0001_init.py
access_service/app/: db.py  main.py  models.py  repositories.py  schemas.py
authorization_service/: Dockerfile  pyproject.toml
authorization_service/alembic/: env.py
authorization_service/alembic/versions/: 0001_init.py
authorization_service/app/: consumer.py  db.py  deps.py  main.py  models.py  repositories.py  schemas.py  services.py  settings.py
request_service/: pyproject.toml
request_service/alembic/: env.py
request_service/alembic/versions/: 0001_init.py
request_service/app/: db.py  main.py  messaging.py  models.py  repositories.py  schemas.py
tests/: test_access_service.py  test_authorization_service.py  test_request_service.py
